[tool.poetry]
name = "mutation-testing"
version = "0.1.0"
description = "mutation testing for polynomial functions"
authors = ["Mikheil"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
